crates/tree-sitter-mosaic/test/corpus/calls.txt
==================
call: figure with label
==================
#figure(image: "demo.png", caption: "Demo") <fig:demo>
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      arguments: (argument_list
        (attribute
          key: (identifier)
          value: (string
            (string_content)))
        (attribute
          key: (identifier)
          value: (string
            (string_content)))))
    label: (block_label
      (label
        name: (label_name)))))

==================
call: qualified name
==================
#std.image("a.png")
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier)
        (identifier))
      arguments: (argument_list
        (string
          (string_content))))))

==================
call: linebreak inline
==================
Foo #linebreak bar.
---

(source_file
  (paragraph
    (paragraph_segment
      (text)
      (linebreak_call)
      (text))))

==================
call: content body
==================
#note[Important content here.]
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      body: (content_body
        (paragraph
          (paragraph_segment
            (text)))))))

==================
call: arguments and content body together
==================
#figure(caption: "Demo")[A figure body.]
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      arguments: (argument_list
        (attribute
          key: (identifier)
          value: (string
            (string_content))))
      body: (content_body
        (paragraph
          (paragraph_segment
            (text)))))))

==================
call: three-segment qualified name
==================
#std.text.bold("hi")
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier)
        (identifier)
        (identifier))
      arguments: (argument_list
        (string
          (string_content))))))
