crates/tree-sitter-mosaic/test/corpus/comments.txt
==================
comment: line comment is trivia
==================
// a comment
= Hello
---

(source_file
  (comment)
  (section
    (section1
      (heading
        marker: (heading_marker)
        content: (inline_sequence
          (text))))))

==================
comment: url slash pair stays prose
==================
Visit http://example.com
---

(source_file
  (paragraph
    (paragraph_segment
      (text))))

==================
comment: slash star pair stays prose
==================
a /* b */ c
---

(source_file
  (paragraph
    (paragraph_segment
      (text)
      (emphasis
        (emph_text))
      (text))))

==================
comment: block comment is trivia
==================
/* block */ = Hi
---

(source_file
  (comment)
  (section
    (section1
      (heading
        marker: (heading_marker)
        content: (inline_sequence
          (text))))))

==================
comment: byte-zero shebang is trivia
==================
#!/usr/bin/env -S mos build --open
= Hello
---

(source_file
  (shebang)
  (section
    (section1
      (heading
        marker: (heading_marker)
        content: (inline_sequence
          (text))))))

==================
comment: byte-zero shebang with crlf is trivia
==================
#!/usr/bin/env -S mos build --open
= Hello
---

(source_file
  (shebang)
  (section
    (section1
      (heading
        marker: (heading_marker)
        content: (inline_sequence
          (text))))))

==================
comment: leading-space shebang stays ordinary paragraph text
==================
 #! not script metadata
---

(source_file
  (paragraph
    (paragraph_segment
      (text))))

==================
comment: later shebang stays ordinary paragraph text
==================
Before
#! not script metadata
---

(source_file
  (paragraph
    (paragraph_segment
      (text))
    (soft_break)
    (paragraph_segment
      (text))))
