crates/tree-sitter-mosaic/test/corpus/directives.txt
==================
set: text font/size
==================
#set text(font: "Noto Sans", size: 11pt)
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content)))
      (attribute
        key: (identifier)
        value: (dimension)))))

==================
set: multi-line
==================
#set page(
  paper: "A4",
  margin: 24mm,
)
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content)))
      (attribute
        key: (identifier)
        value: (dimension)))))

==================
import: with items
==================
#import "@mosaic/templates/article": article, theme
---

(source_file
  (import_directive
    path: (string
      (string_double_content))
    items: (import_items
      (identifier)
      (identifier))))

==================
import: bare
==================
#import "lib.mos"
---

(source_file
  (import_directive
    path: (string
      (string_double_content))))

==================
include
==================
#include "sections/intro.mos"
---

(source_file
  (include_directive
    path: (string
      (string_double_content))))

==================
include: path with escaped backslash
==================
#include "sections\\intro.mos"
---

(source_file
  (include_directive
    path: (string
      (string_double_content)
      (escape_sequence)
      (string_double_content))))

==================
set: nested call as attribute value
==================
#set page(size: a4(landscape: true))
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (call_expr
          function: (qualified_name
            (identifier))
          arguments: (argument_list
            (attribute
              key: (identifier)
              value: (boolean))))))))

==================
import: single-quoted path
==================
#import 'lib.mos'
---

(source_file
  (import_directive
    path: (string
      (string_single_content))))

==================
set: opposite quotes inside strings
==================
#set document(title: "has ' apostrophe", author: 'has " quote')
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content)))
      (attribute
        key: (identifier)
        value: (string
          (string_single_content))))))

==================
two adjacent directives without blank line
==================
#set a(x: 1)
#set b(y: 2)
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (number))))
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (number)))))

==================
set: missing closing paren inserts MISSING ")"
==================
#set text(font: "Noto Sans"
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content)))
      (MISSING ")"))))

==================
import: bare keyword falls back to generic block call
==================
#import
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier)))))

==================
directive keywords require following whitespace
==================
#setpage()
#import"x"
#include"x"
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      arguments: (argument_list)))
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))))
  (paragraph
    (paragraph_segment
      (text)))
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))))
  (paragraph
    (paragraph_segment
      (text))))

==================
set: attribute with empty value
==================
#set text(font:)
---

(source_file
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (qualified_name
        (identifier))
      (ERROR))))

==================
include: unterminated string literal recovers at next directive
==================
#include "unterminated
#set a(b: 1)
---

(source_file
  (include_directive
    path: (string
      (string_double_content)))
  (set_directive
    target: (identifier)
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (number)))))
