crates/tree-sitter-mosaic/test/corpus/raw_blocks.txt
==================
pre: exact spacing
==================
#pre[[  exact spacing]]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
code: with language arg
==================
#code(lang: "rust")[[fn main() {}]]
---

(source_file
  (code_block
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content))))
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: literal closing bracket text
==================
#pre[[contains ] bracket]]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: literal backslash close text
==================
#pre[[contains \] text]]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: long bracket allows shorter close pair
==================
#pre[=[contains ]] text]=]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: empty body
==================
#pre[[]]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_close))))

==================
pre: multi-line body
==================
#pre[[line one
line two
line three]]
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
code: bare body (no arguments)
==================
#code[[plain code body]]
---

(source_file
  (code_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
raw block keywords do not match prefixes
==================
#prelude[]
#codec[]
#versex[]
---

(source_file
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      body: (content_body)))
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      body: (content_body)))
  (block_call
    (hash_call
      function: (qualified_name
        (identifier))
      body: (content_body))))

==================
code: zero equals with inner brackets
==================
#code[[let x = vec![1, 2, 3];]]
---

(source_file
  (code_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: with argument
==================
#pre(indent: 2)[[step over]]
---

(source_file
  (pre_block
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (number)))
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))

==================
pre: with trailing block label
==================
#pre[[snippet]] <ex:demo>
---

(source_file
  (pre_block
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))
    label: (block_label
      (label
        name: (label_name)))))

==================
code: multiple attributes in argument list
==================
#code(lang: "rust", line: 42)[[fn x() {}]]
---

(source_file
  (code_block
    arguments: (argument_list
      (attribute
        key: (identifier)
        value: (string
          (string_double_content)))
      (attribute
        key: (identifier)
        value: (number)))
    body: (raw_body
      (raw_body_open)
      (raw_body_content)
      (raw_body_close))))
